基本配置完成

--- a/src/kurumi.scss
+++ b/src/kurumi.scss
@@ -3,6 +3,10 @@
   color: violet;
   transform: rotateX(45deg);
 
+  .img {
+    width: 100%;
+  }
+
   .child {
     display: inline-block;
     position: relative;
